@@ -7,7 +7,12 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
    https://github.com/gugod/App-perlbrew/blob/master/perlbrew-install, so
    the change originates from GitHub and can be trusted. Our CI flow compares
    the checksum of the downloaded script to the expected value. We now store
-   an updated expeced checksum value, which corresponds to the latest release.
+   an updated expected checksum value, which corresponds to the latest release.
+ - npg_qc::autoqc::check::review:
+  The forthcoming lane-level evaluations are impossible if the code continues
+  to error when library_type attribute is not defined for the entity under
+  consideration. The library_type attribute is now set when possible, no error
+  if it is undefined.
 
 release 72.2.0 (2024-08-30)
  - npg_qc::autoqc::check::review:
